--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 /* Logo */
 .container-header{
+    width: 100%;
     height: 135px;
     background-color: blue;
 }
@@ -32,11 +33,13 @@
     height: 500px;
     background-color: red;
     margin-top: 50px;
+    border-bottom: 5px solid black;
 }
 
 .parte-superiore{
-    height: 50px;
+    padding: 10px;
     background-color: yellow;
+    border-bottom: 5px solid black;
 }
 
 .add{
@@ -47,6 +50,21 @@
     margin-left: 20px;
     margin-top: 20px;
     line-height: 50px;
+    padding: 12px;
 }
-.first-add{
+
+.parte-inferiore{
+    background-color: turquoise;
+
+}
+
+.subtitle{
+    margin: 30px 0 40px 30px;
+}
+.normal-text{
+    display: inline;
+}
+.link  {
+    display: inline-block;
+    background-color: blue;
 }
